--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,6 @@
-RewriteEngine On
-
-# Put your installation directory here:
-# If your URL is www.example.com/, use /
-# If your URL is www.example.com/site_folder/, use /site_folder/
-
-RewriteBase /
-
-# Do not enable rewriting for files or directories that exist
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-
-# For reuests that are not actual files or directories,
-# Rewrite to index.php/URL
-RewriteRule ^(.*)$ index.php/$1 [PT,L] 
+<IfModule mod_rewrite.c>
+    RewriteEngine on
+    RewriteCond $1 !^(index\.php|images|robots\.txt|css|js|chosen|assets|img)
+    RewriteRule ^(.*)$ ./index.php/$1 [L]
+    
+</IfModule>  
